Make changes to HomePage style sheet.

--- a/2.css
+++ b/2.css
@@ -1,9 +1,9 @@
 
 body{
-  background-color: #354
+  background-color: #576
 }
 
-h1 {
+h1, b {
   font-size:40;
   text-align: center;
   color:#114411;
