--- a/2.css
+++ b/2.css
@@ -7,7 +7,7 @@ h1 {
 	font-size: 40;
 	text-align: center;
 	color: ##F0F0FF;
-	background-color: #0000FF;
+	background-color: #36d9eb;
 	font-family:arial;
 }
 
