--- a/Templates/Template1.html
+++ b/Templates/Template1.html
@@ -9,8 +9,8 @@
   
   <meta name="robots" content="noindex, nofollow">/*change to all to show up on google*/
 
-<link rel="stylesheet" href="DeverellManning.github.io/CSS/Global.css">
-<link rel="stylesheet" href="DeverellManning.github.io/CSS/styleM.css">
+<link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
+<link rel="stylesheet" href="https://deverellmanning.github.io/CSS/styleM.css">
 
 </head>
 <body>
