--- a/Templates/Template1.html
+++ b/Templates/Template1.html
@@ -2,12 +2,15 @@
 <head>
 
 <meta charset="UTF-8">
+  
+  <title>???</title>
+  
   <meta name="description" content="Undescribed. Curently . . .">
   <meta name="keywords" content="none">
   <meta name="author" content="Deverell M.">
   <meta name="generator" content="Hand-written">
   
-  <meta name="robots" content="noindex, nofollow">/*change to all to show up on google*/
+  <meta name="robots" content="noindex, nofollow"><!--change to all to show up on google -->
 
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/styleM.css">
