--- a/Me/styelart.css
+++ b/Me/styelart.css
@@ -1,30 +1,25 @@
-div.sidebar{
-background:gray;
-position:fixed;
-float:right;
-bottom:30%;
-right:-305;
-border-left:black 25px solid;
-transition:1s;
-z-index:2
-}
+div.sidebar{background:gray; position:fixed; float:right; bottom:30%;right:-305;border-left:black 25px solid;transition:1s; z-index:2;}
 
 div.sidebar:hover{
 right:0;
 transition:2s;
 border-left:3px solid black;
+background:lightslategray;
 }
 
+
 body{
-background: #1C6EA4;
-background: -moz-radial-gradient(center, #1C6EA4 0%, #2388CB 50%, #144E75 100%);
-background: -webkit-radial-gradient(center, #1C6EA4 0%, #2388CB 50%, #144E75 100%);
-background: radial-gradient(ellipse at center, #1C6EA4 0%, #2388CB 50%, #144E75 100%);
-overflow-x:hidden;
+background: #52aeff;
+font-family:cursive;font-size:13;
+overflow-x:clip;
 }
 
 div.Title{
-background:blue;
+background:#5757ff;
+box-shadow: 0px 0px 5px 4px #5757ff;
+-webkit-box-shadow:blue 0 0 10 10;
+font-family:system-ui;
+font-size:20;
 }
 div.MainContent{
 width:100%;
@@ -32,41 +27,24 @@ width:100%;
 
 div.Footer{
 position:fixed;
-left:0;
-bottom:0;
-background:grey;
+left:2px;
+bottom:-2;
+background:slategray;
 height:10%;
-width:100%
-border-top: 4px ridge #000000;
+width:97%;
+border: 4px ridge #000000;
+z-index:1;
+padding:7px;
 }
 
 td{
       outline:black solid;
       cursor: pointer;
+      position:relative;
 }
 td:hover{
       -webkit-box-shadow: 0px 0px 23px 3px #EDFF3E; 
 box-shadow: 0px 0px 23px 3px #EDFF3E;
-}
+z-index:1;
 
-.container{
 }
-
-#expandedImg{
-      position:fixed;
-      left:10%;
-      top:1%;
-      height:99%;
-      overflow:scroll;
-      right:0;left:0;
-      margin:auto;
-}
-
-span.closebtn{
-      position:fixed;
-      left:50%;
-      top:1%;
-      color:black;
-      z-index:4;
-}
-
