--- a/Topics/Minecraft/styel1.css
+++ b/Topics/Minecraft/styel1.css
@@ -13,6 +13,7 @@ box-shadow: 4px 4px 9px 3px rgba(0,0,0,0.91);
 border: 4px outset rgba(32,164,56,0.88);
 outline: 3px dashed rgba(32,164,56,0.88);
 outline-offset: -2px;
+  color:white;
 }
 
 
