Make Terrarium Project Pages

--- a/Utility/Template/template.html
+++ b/Utility/Template/template.html
@@ -12,15 +12,15 @@
 
     <meta name="robots" content="none" />
 
-    <base href="" target="_blank"/>
+    
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
     <link rel="stylesheet" type="text/css" href="./styel.css" />
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" title="Iframe Example"></iframe>
-
+        <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
+        
         <div class="Puller">•<br>•<br>•<br></div>
     </div>
 
@@ -33,8 +33,8 @@
     <Page class="MainContent">
         <section>
             <div class="Title">
-                <h1>Title</h1>
-                <h3>Subtitle</h3>
+                <h1>Terrarium Project Index</h1>
+                <h3>Coming Soon</h3>
             </div>
         </section>
 
@@ -45,7 +45,7 @@
             "<quote>Quote</quote>"
             <address><a href="">deverellmanning.github.io</a></address>
             <br />
-            <hi>Last Updated: 1/18/2022</hi>
+            <hi>Last Updated: 5/2/2022</hi>
             <hr />
         </section>
 
