--- a/Assets/CSS/styel.css
+++ b/Assets/CSS/styel.css
@@ -382,7 +382,7 @@ Page {
         padding-left:var(--Section-Padding); padding-right:var(--Section-Padding);
 
         line-height:1.2em;
-        font-size:16px;
+        font-size:18px;
         border-radius:5px;
         height;
     }
@@ -395,9 +395,9 @@ Page Section.Col2PicLeft {
 }
 
 Page Section.Col2PicLeft img{
-  width:220px;
-  margin-left:20px;
-  margin-right:20px;
+  width:240px;
+  margin:20px;
+  margin-left:16.5%;
 }
 
 Page Section.Col2PicLeft p{}
@@ -409,9 +409,9 @@ Page Section.Col2PicRight {
 }
 
 Page Section.Col2PicRight img{
-  width:220px;
-  margin-left:20px;
-  margin-right:20px;
+  width:240px;
+  margin:20px;
+  margin-right:16.5%;
 }
 
 Page Section.Col2PicRight p{}
@@ -423,9 +423,8 @@ Page Section.Col3PicCent {
 }
 
 Page Section.Col2PicCent img{
-  width:210px;
-  margin-left:15px;
-  margin-right:15px;
+  width:240px;
+  margin:15px;
 }
 
 Page Section.Col2PicCent p{}
@@ -454,15 +453,15 @@ Page Section.Col2PicCent p{}
         }
 
             Page Section div.Title h1{
-                font-size:45px;
+                font-size:54px;
                 letter-spacing:2px;
-                margin:20px;
+                margin:28px;
             }
 
             Page Section div.Title h3{
-                font-size:24px;
+                font-size:25px;
                 letter-spacing:1px;
-                margin:16px;
+                margin:18px;
             }
 
             Page Section.Footer, Page div.Footer, Page span.Footer {
