--- a/Gallery/image.css
+++ b/Gallery/image.css
@@ -1,32 +1,41 @@
 div.Gallery{
   background:var(--chromaT-D);
-  display:inline-block;
+  display:flex;
   position:relative;
   border:double var(--chromaM-D2) 5px;
   text-align: center;
+
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+
 }
 
 img.tp{
-  width:100%;
-  height:100%;
-  position: relative;
+  position: absolute;
 }
 
 figure {
   border: black thin solid;
-  display: inline-block;
+  display: flex;
   width: 22%;
-  height: 200px;
-  opacity: 55%;
-  margin:5px;
-  transition:1.5s;
-  text-align:center;
+  height: min-content;
+  opacity: 70%;
+  margin: 5px;
+  transition: 1.5s;
+  text-align: center;
+  align-content: stretch;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  overflow: clip;
 }
 
 figure img {
-  width: 22%;
-  position: absolute;
+  height: 250px;
+  position: relative;
   opacity: inherit;
+  display: inline;
 }
 
 
@@ -49,7 +58,7 @@ figure figcaption{
     background:var(--chromaT-L2);
 }
 
-figure div.disc{
+figure div{
     display:none;
 }
 figure figcaption.title{
