--- a/Assets/CSS/styel.css
+++ b/Assets/CSS/styel.css
@@ -82,6 +82,10 @@ color:green;
 
 /* TEXT STYLES */
 
+p{
+  /*text-indent: 3em;*/
+}
+
 hi{
   display: inline-block;
   padding:2px;
@@ -96,7 +100,7 @@ b{
 }
 
 u{
-  text-decoration: underline blink var(--chromaT-D);*/
+  text-decoration: underline blink var(--chromaT-D);
 }
 
 i{}
@@ -435,12 +439,12 @@ Page Section.Col2PicCent p{}
             text-align: center;
             width:calc(100% + var(--Section-Padding)*2 + 2%*2);
             left:calc(-1 * var(--Section-Padding) - 2%);
-            top:-40px;
+            /* top:-40px; */
             position:relative;
 	    z-index:2;
 
-            padding-left:75;
-            padding-right:75;
+            /*padding-left:75;
+            padding-right:75;*/
             margin-top:2%;
             background:var(--chromaT);
             color:var(--chromaA);
@@ -449,7 +453,9 @@ Page Section.Col2PicCent p{}
         }
 
         Page Section:first-child{
-          top: 40px;
+          margin-top: 40px;
+    	  padding-bottom: 0;
+    	  padding-top: 0;
         }
 
             Page Section div.Title h1{
