--- a/Utility/Template/dated-template.html
+++ b/Utility/Template/dated-template.html
@@ -1,4 +1,4 @@
-﻿<!doctype HTML>
+<!doctype HTML>
 <HTML>
 <head>
     <title></title>
@@ -12,29 +12,29 @@
 
     <meta name="robots" content="none" />
 
-    <base href="" target="_blank"/>
+    
 
-    <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="./assets/CSS/styel.css" />
+    <link rel="stylesheet" href="/assets/CSS/Global.css">
+    <link rel="stylesheet" type="text/css" href="/assets/CSS/styel.css" />
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" title="Iframe Example"></iframe>
-
+        <iframe src="/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
+        
         <div class="Puller">•<br>•<br>•<br></div>
     </div>
 
     <div class="Topbar">
-        <span class="left"></span>
-        <span class="cent"></span>
-        <span class="right"></span>
+        <span class="left"><a href="">Previous</a></span>
+        <span class="cent">6/26/2024</span>
+        <span class="right"><a href="">Next</a></span>
     </div>
 
     <Page class="MainContent">
         <section>
             <div class="Title">
-                <h1>Title</h1>
-                <h3>Subtitle</h3>
+                <h1></h1>
+                <h3></h3>
             </div>
         </section>
 
@@ -42,11 +42,14 @@
         </section>
 
         <section class="Footer">
-            "<quote>Quote</quote>"
-            <address><a href="">deverellmanning.github.io</a></address>
-            <br />
-            <hi>Last Updated: 1/18/2022</hi>
-            <hr />
+            <a href="/index.html"><img src="/assets/Images/DM-Logo-v2.png"/></a>
+            <div>
+                <address>
+                    <a href="/index.html">deverellmanning.github.io</a>
+                </address>
+
+                <hi>Last Updated: 6/26/2024</hi>
+            </div>
         </section>
 
     </Page>
