--- a/gallery/xpand.css
+++ b/gallery/xpand.css
@@ -16,6 +16,19 @@
   font-size: 20px;
   z-index:15;
   width: 15%;
+
+  background: #22272d99;
+  border-radius: 6px;
+  padding: 4px;
+  box-shadow: 0px 0 5px 2px #22272d;
+}
+
+#imgtext:hover {
+  background: #22272d;
+}
+
+#imgtext:empty {
+  display: none;
 }
 
 #expandedImg{
